# RoboSplatter

./: .gitignore  .pre-commit-config.yaml  CODE_REVIEW_SUMMARY.md  MANIFEST.in  README.md  REVIEW_AND_TEST_SUMMARY.md  check_assets.sh  pyproject.toml  test_updates.py
assets/: .gitattributes
config/: gs_data_basic.yaml  gs_data_fg_bg_mix.yaml
robo_splatter/models/: basic.py  camera.py  gaussians.py
robo_splatter/render/: scenes.py
robo_splatter/scripts/: render_scene.py  render_scene_batch.py
robo_splatter/test/: directi_trans_test.py
robo_splatter/utils/: direct_transform.py  helper.py
scripts/lint_src/: cpplint.hook
