[project]
name = "robo_splatter"
version = "0.1.2"
description = "Gaussian Splatting for Robotic Simulation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dataclasses-json", #>=0.6.7
    "gsplat@git+https://github.com/nerfstudio-project/gsplat.git@v1.5.3", #"gsplat>=1.5.3",
    "imageio",
    "imageio-ffmpeg",
    "opencv-python-headless",
    "plyfile",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "numpy<2",
    "torch",
    "tqdm",
]

[tool.setuptools]
packages = ["robo_splatter"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pydocstyle",
    "black",
    "isort",
    "pytest",
]

[project.scripts]
render-cli = "robo_splatter.scripts.render_scene:entrypoint"

[tool.pydocstyle]
match = '(?!test_).*(?!_pb2)\.py'
match-dir = '^(?!(raw|projects|thirdparty)$)[\w.-]+$'
convention = "google"
add-ignore = 'D104,D107,D202,D105,D100,D102,D103,D101,E203,W503'

[tool.black]
line-length = 79
exclude = "thirdparty"

[tool.isort]
line_length = 79
profile = 'black'
no_lines_before = 'FIRSTPARTY'
known_first_party = ['robo_splatter']
skip = "thirdparty/"
